--- a/class_desc.html
+++ b/class_desc.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
             <a class="navbar-brand" id="logo"><b>RPI Dance Club</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,8 @@
                         <div id="class-desc-box">
                             <br>
                             <br>
+                            <br>
+                            <br>
                             <h5><b>JAZZ</b></h5>
                             <div id="desc_text">Jazz uses a base of ballet technique and then layers it with traditional jazz movements. These movements include kicks, leaps, and turns. The class structure is usually a warm up with stretching and strengthening exercises followed by across-the-floor progressions and combinations.</div><br>
                             <h5><b>CONTEMPORARY BALLET</b></h5>
@@ -71,6 +73,26 @@
         <footer>
             <center>Copyright &#169; 2019 RPI Dance Club</center>
         </footer>
+
+        <script>
+            if ($(window).width() > 747) {
+                window.onscroll = function() {scrollFunction()};
+            }
+            
+            function scrollFunction() {
+                if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+                    document.getElementById("navbar").style.padding = "20px 10px";
+                    document.getElementById("logo").style.fontSize = "26px";
+                    document.getElementById("navbar").style.backgroundColor = "#2b2a2a";
+                    document.getElementById("logo").style.color = "#bd20bd";
+                } else {
+                    document.getElementById("navbar").style.padding = "40px 10px";
+                    document.getElementById("logo").style.fontSize = "30px";
+                    document.getElementById("navbar").style.backgroundColor = "transparent";
+                    document.getElementById("logo").style.color = "#bd20bd";
+                }
+            }
+        </script>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
